# polytrader

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEST_REPORT.md  config.yaml.example  dashboard.py  pyproject.toml  requirements.txt  test-report.xml
.github/workflows/: ci.yml
polytrader/: __init__.py  cli.py  config.py
polytrader/analytics/: __init__.py  metrics.py  significance.py
polytrader/core/: __init__.py  client.py  executor.py  websocket.py
polytrader/data/: __init__.py  market.py  models.py  storage.py
polytrader/indicators/: __init__.py  basic.py
polytrader/strategy/: __init__.py  base.py  loader.py  runner.py
polytrader/utils/: __init__.py  helpers.py  logging.py  url_parser.py
strategies/: btc_term_structure_arb.py  example_strategy.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_executor.py  test_helpers.py  test_indicators.py  test_metrics.py  test_models.py  test_significance.py  test_storage.py  test_strategy.py  test_url_parser.py  test_websocket_live.py
